// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Augmente 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel augmenté : 10 points
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel augmenté : 10 points
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel augmenté : 10 points
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Desactive 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel réduit : 0 point
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel réduit : 0 point
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel réduit : 0 point
    </div>
  </div>
  <a
    className="fr-link fr-link--icon-left fr-icon-settings-5-line fr-ml-2w fr-text--sm"
    href="#"
    onClick={[Function]}
  >
    Personnaliser le potentiel
  </a>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Non Personnalise 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel : 6,7 points
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel : 6,7 points
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel : 6,7 points
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Personnalise Et Editable 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel réduit : 3,3 points
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel réduit : 3,3 points
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel réduit : 3,3 points
    </div>
  </div>
  <a
    className="fr-link fr-link--icon-left fr-icon-settings-5-line fr-ml-2w fr-text--sm"
    href="#"
    onClick={[Function]}
  >
    Personnaliser le potentiel
  </a>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Personnalise Score Zero 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel réduit : 0 point
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel réduit : 0 point
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel réduit : 0 point
    </div>
  </div>
  <a
    className="fr-link fr-link--icon-left fr-icon-settings-5-line fr-ml-2w fr-text--sm"
    href="#"
    onClick={[Function]}
  >
    Personnaliser le potentiel
  </a>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Reduit 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel réduit : 3,3 points
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel réduit : 3,3 points
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel réduit : 3,3 points
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/PersoPotentielModal/PointsPotentiels Reduit Deux Digits 1`] = `
<div
  className="flex items-center"
  data-test="PointsPotentiels"
>
  <div
    className="relative whitespace-nowrap"
  >
    <span
      className="text-transparent"
    >
      Potentiel réduit : 3,35 points
    </span>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-100"
    >
      Potentiel réduit : 3,35 points
    </div>
    <div
      className="absolute top-0 transition-opacity duration-300 ease-in-out left-0  opacity-0"
    >
      Potentiel réduit : 3,35 points
    </div>
  </div>
</div>
`;
